--- a/README
+++ b/README
@@ -4,16 +4,16 @@
 
 About C-Reduce:
 
-C-Reduce is a tool that takes a large C or C++ program that has a
-property of interest (such as triggering a compiler bug) and
-automatically produces a much smaller C/C++ program that has the same
-property.  It is intended for use by people who discover and report
-bugs in compilers and other tools that process C/C++ code.
+C-Reduce is a tool that takes a large C, C++ or OpenCL program that
+has a property of interest (such as triggering a compiler bug) and
+automatically produces a much smaller C/C++ or OpenCL program that has
+the same property.  It is intended for use by people who discover and
+report bugs in compilers and other tools that process C/C++ or OpenCL
+code.
 
 NOTE: C-Reduce happens to do a pretty good job reducing the size of
-programs in languages other than C/C++, such as JavaScript and Rust.
-If you need to reduce programs in some other language, please give it
-a try.
+programs in non C-like languages, such as JavaScript and Rust.  If you
+need to reduce programs in some other language, please give it a try.
 
 Documentation and other information can be found at the C-Reduce web
 page:
